--- a/src/components/NavBar/styles.scss
+++ b/src/components/NavBar/styles.scss
@@ -1,12 +1,108 @@
-.nav {
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
+
+  background-color: #7c7287;
+
   width: 100%;
-  border: 1px red solid;
+  min-height: 4rem;
 
-  ul {
-    list-style-type: none;
+  &__logo {
+    width: 4rem;
+    aspect-ratio: 1;
+    padding-inline: 1rem;
+  }
 
-    li {
-      display: inline-block;
+  &__primary-nav {
+    display: flex;
+    gap: var(--gap, 1rem);
+
+    list-style: none;
+    padding-inline: 2rem;
+    margin: 0;
+  }
+
+  &__primary-nav-route {
+    font-family: "IBM Plex Mono";
+    font-weight: 700;
+    font-size: larger;
+    text-transform: uppercase;
+    color: #b2edc5;
+
+    &--active {
+      text-decoration: underline wavy;
+    }
+
+    &:hover {
+      color: #b2edc586;
+    }
+  }
+
+  &__mobile-toggle {
+    display: none;
+  }
+
+  @media (max-width: 35em) {
+    min-height: 2rem;
+
+    &__primary-nav {
+      --gap: 2em;
+
+      position: fixed;
+      z-index: 1000;
+      inset: 0 0 0 30%;
+
+      flex-direction: column;
+      padding: min(30vh, 10rem) 2em;
+
+      background: hsl(0 0% 0% / 0.5);
+
+      transform: translateX(100%);
+      transition: transform 250ms ease-out;
+
+      &--open {
+        transform: translateX(0%);
+      }
+    }
+
+    &__primary-nav-route {
+      color: #7c7287;
+
+      &--active {
+        color: #9dc0bc !important;
+        text-decoration: underline wavy;
+        text-underline-offset: 1rem;
+      }
+    }
+
+    @supports (backdrop-filter: blur(1rem)) {
+      &__primary-nav {
+        background: hsl(0 0% 100% / 0.8);
+        backdrop-filter: blur(1.5rem);
+      }
+    }
+
+    &__mobile-toggle {
+      display: block;
+      position: absolute;
+      z-index: 9999;
+      object-fit: contain;
+
+      background-image: url(@/assets/hamburger.svg);
+      width: 2rem;
+      height: 100%;
+      border: 0;
+      aspect-ratio: 1;
+      top: 1rem;
+      right: 1rem;
+      background-color: transparent;
+      background-repeat: no-repeat;
+
+      &--open {
+        background-image: url(@/assets/close.svg);
+      }
     }
   }
 }
