--- a/src/index.scss
+++ b/src/index.scss
@@ -1,11 +1,46 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+@font-face {
+  font-family: "IBM Plex Mono";
+  src: local("IBM Plex Mono"),
+    url(./fonts/IBMPlexMono-Regular.ttf) format("truetype");
+}
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+@font-face {
+  font-family: "IBM Plex Mono";
+  font-weight: 700;
+  src: local("IBM Plex Mono"),
+    url(./fonts/IBMPlexMono-Bold.ttf) format("truetype");
+}
+
+@font-face {
+  font-family: "Rubik";
+  src: local("Rubik"), url(./fonts/Rubik-Regular.ttf) format("truetype");
+}
+
+@font-face {
+  font-family: "Rubik";
+  font-weight: 300;
+  src: local("Rubik"), url(./fonts/Rubik-Light.ttf) format("truetype");
+}
+
+@font-face {
+  font-family: "Rubik";
+  font-weight: 700;
+  src: local("Rubik"), url(./fonts/Rubik-Bold.ttf) format("truetype");
+}
+
+@font-face {
+  font-family: "AmaticSC";
+  font-weight: 700;
+  src: local("AmaticSC-Bold"), url(./fonts/AmaticSC-Bold.ttf) format("truetype");
+}
+
+:root {
+  font-family: Rubik, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  line-height: 1.5;
+
+  // color-scheme: light dark;
+  // color: rgba(255, 255, 255, 0.87);
+  // background-color: #242424;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -16,7 +51,7 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  // color: #646cff; TODO: remove
   text-decoration: inherit;
 }
 a:hover {
@@ -28,7 +63,9 @@ body {
   display: flex;
   place-items: center;
   min-width: 320px;
-  min-height: 100vh;
+  min-height: 100%;
+  font-size: 1.125rem;
+  line-height: 1.6;
 }
 
 h1 {
@@ -36,34 +73,16 @@ h1 {
   line-height: 1.1;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.sr-only {
+  display: none;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-}
+// @media (prefers-color-scheme: light) {
+//   :root {
+//     color: #213547;
+//     background-color: #ffffff;
+//   }
+//   a:hover {
+//     color: #747bff;
+//   }
+// }
