--- a/src/routes/root/styles.scss
+++ b/src/routes/root/styles.scss
@@ -1,12 +1,11 @@
 #root {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  min-height: 100svh;
   margin: 0 auto;
   text-align: center;
 }
 
 main {
-  width: min(1280px, 100% - 4rem);
+  width: min(1024px, 100% - 3rem);
   margin-inline: auto;
-  border: 1px blue solid; // TODO REMOVE
 }
