--- a/src/routes/about/styles.scss
+++ b/src/routes/about/styles.scss
@@ -1,11 +1,7 @@
 .aboutpage {
   text-align: start;
 
-  &__section-header {
+  h2 {
     font-size: xx-large;
   }
-}
-
-.introductions {
-  text-align: start;
 }
