--- a/src/index.scss
+++ b/src/index.scss
@@ -34,6 +34,12 @@
   src: local("AmaticSC-Bold"), url(./fonts/AmaticSC-Bold.ttf) format("truetype");
 }
 
+@font-face {
+  font-family: "SuperDonuts";
+  font-weight: 700;
+  src: local("SuperDonuts"), url(./fonts/Super-Donuts.ttf) format("truetype");
+}
+
 :root {
   font-family: Rubik, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -50,12 +56,7 @@
 }
 
 a {
-  font-weight: 500;
-  // color: #646cff; TODO: remove
   text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
 }
 
 body {
@@ -65,14 +66,21 @@ body {
   min-width: 320px;
   min-height: 100%;
   font-size: 1.125rem;
-  line-height: 1.6;
+  line-height: 1.8;
 }
 
 h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+  font-size: 2.5em;
 }
 
+h1,
+h2,
+h3 {
+  font-family: SuperDonuts;
+  letter-spacing: 0.3rem;
+}
+
+.hidden,
 .sr-only {
   display: none;
 }
