--- a/src/components/BackToTop/styles.scss
+++ b/src/components/BackToTop/styles.scss
@@ -1,7 +1,7 @@
 .backtotop {
   background: white url(@/assets/vertical-align.svg) no-repeat center;
   height: 50px;
-  aspect-ratio: 1;
+  aspect-ratio: 1 / 1;
   border: 2px solid black;
   border-radius: 50%;
   cursor: pointer;
