--- a/src/components/NavBar/styles.scss
+++ b/src/components/NavBar/styles.scss
@@ -11,7 +11,7 @@
 
   &__logo {
     width: 4rem;
-    aspect-ratio: 1;
+    aspect-ratio: 1 / 1;
     padding-inline: 1rem;
   }
 
@@ -59,7 +59,7 @@
       flex-direction: column;
       padding: min(30vh, 10rem) 2em;
 
-      background: hsl(0 0% 0% / 0.5);
+      background: white;
 
       transform: translateX(100%);
       transition: transform 250ms ease-out;
@@ -96,7 +96,7 @@
       width: 2rem;
       height: 100%;
       border: 0;
-      aspect-ratio: 1;
+      aspect-ratio: 1 / 1;
       top: 1rem;
       right: 1rem;
       background-color: transparent;
